# RookMoves

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  board_position.cpp  board_position.hpp  chess_board.cpp  chess_board.hpp  consts.hpp  engine.cpp  engine.hpp  main.cpp  rook.cpp  rook.hpp  utils.cpp  utils.hpp  with_sanitizers.cpp
